--- a/CFD/test_GMI.ipynb
+++ b/CFD/test_GMI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,13 +234,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Initialisation des valeurs avec PVT-thermal-performances-model\n",
     "\n",
-    "df_one, res = ty.simu_one_steady_state_all_he(panelSpecs, stepConditions[case], hyp)\n",
+    "df_one, res = ty.simu_one_steady_state_all_he(panelSpecs, stepConditions[case], hyp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# file_path_result_df_one = r'D:\\ANSYS Fluent Projects\\pvt_slice_outdoor\\Fluent_GMI\\tests\\test_df_one.csv'\n",
+    "# file_path_result_slices_df = r'D:\\ANSYS Fluent Projects\\pvt_slice_outdoor\\Fluent_GMI\\tests\\test_slices_df.csv'\n",
+    "\n",
+    "# ## Sauvegarde des données du modèle 1D\n",
+    "# # Sauvegarde de df_one\n",
+    "# keys = list(res['part1']['df_one'].keys())\n",
+    "# values_dict = {key: [] for key in keys}\n",
+    "\n",
+    "# # Collecte des valeurs dans des listes pour chaque clé\n",
+    "# for i in range(1, nb_hx+3):\n",
+    "#     part_key = f'part{i}'\n",
+    "#     if part_key in res:\n",
+    "#         for key in keys:\n",
+    "#             values_dict[key].append(res[part_key]['df_one'][key].values[0])\n",
+    "\n",
+    "# # Création du DataFrame à partir des listes de valeurs\n",
+    "# result_1D_df_one = pd.DataFrame(values_dict)\n",
+    "\n",
+    "# # Ajouter les noms des index pour refléter les parties\n",
+    "# result_1D_df_one.index = [f'part{i}' for i in range(1, nb_hx + 3)]\n",
+    "# result_1D_df_one.to_csv(file_path_result_df_one,sep=';', index=False)\n",
+    "\n",
+    "# # Sauvegarde de slices_df\n",
+    "# keys = list(res['part1']['slices_df'].keys())\n",
+    "# values_dict = {key: [] for key in keys}\n",
+    "\n",
+    "# # Collecte des valeurs dans des listes pour chaque clé\n",
+    "# for part in range(1, nb_hx+3):\n",
+    "#     part_key = f'part{part}'\n",
+    "#     if part_key in res:\n",
+    "#         for key in keys:\n",
+    "#             values_dict[key].append(res[part_key]['slices_df'][key].values[0])\n",
+    "\n",
+    "# # Création du DataFrame à partir des listes de valeurs\n",
+    "# result_1D_slices_df = pd.DataFrame(values_dict)\n",
+    "# result_1D_slices_df.index = [f'part{i}' for i in range(1, nb_hx+3)]\n",
+    "# result_1D_slices_df.to_csv(file_path_result_slices_df,sep=';', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# On initialise la première température avec le modèle et le transfert radiatif\n",
     "apb.set_value('T_fluid_in_1', 'named_expression', Inputs, stepConditions[case]['T_fluid_in0'])\n",
@@ -5000,7 +5054,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
