--- a/CFD/test_visu.ipynb
+++ b/CFD/test_visu.ipynb
@@ -147,6 +147,20 @@
     "pb.plot_1D_DeltaT('Qdot_tube_fluid', plot_hyp, panelSpecs, hyp, stepConditions)\n",
     "## Fonctionne pas trop "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_hyp['method'] = 'case'\n",
+    "plot_hyp['no_mesh'] = 0\n",
+    "nb_cases = plot_hyp['nb_cases']\n",
+    "for case in range(nb_cases):\n",
+    "    plot_hyp['no_case'] = case\n",
+    "    pb.plot_CFD_last_it('Qdot_top_conv', plot_hyp, panelSpecs, hyp, stepConditions)"
+   ]
   }
  ],
  "metadata": {
