--- a/TEST_simu_one_steady_state.ipynb
+++ b/TEST_simu_one_steady_state.ipynb
@@ -68,42 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# panelSpecs['part3']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# pr.top_area_PV(panelSpecs['part3'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sC = stepConditions[61]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sC"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "sC = stepConditions[61]\n",
     "sC['T_guess_PV'] = (sC['T_fluid_in0']+sC['T_amb'])/2"
    ]
   },
@@ -113,7 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# pr.disp_html(steadyStateConditions_df)"
+    "sC"
    ]
   },
   {
@@ -138,24 +103,6 @@
     "hyp['CFD_ht_path'] = folder_path + '\\\\' + 'CFD\\\\vde\\\\test'\n",
     "big_it = hyp['big_it']\n",
     "CFD_ht = pd.read_csv(hyp['CFD_ht_path']+f'_{big_it}.csv',sep=';')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "CFD_ht"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "panelSpecs['part2']['C_B']"
    ]
   },
   {
@@ -197,7 +144,7 @@
     "for part in panelSpecs['decomp'].keys():\n",
     "    if part != 'main':\n",
     "        print(part)\n",
-    "        print('Qdot_tube_back',res[part]['df_one']['Qdot_tube_back_conv'].values[0])\n",
+    "        print('Qdot_tube_back',res[part]['df_one']['Qdot_tube_back'].values[0])\n",
     "        print('phi_tube', res[part]['df_one']['Qdot_tube_back'].values[0] / pr.back_area_tube_conv_and_rad(panelSpecs[part]))"
    ]
   },
