--- a/CFD/test_visu.ipynb
+++ b/CFD/test_visu.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,15 +51,7 @@
     "import heat_transfer as bht\n",
     "import fluids as fds\n",
     "import ht\n",
-    "import general as gen"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import general as gen\n",
     "folder_path = r'D:\\ANSYS Fluent Projects\\pvt_slice_outdoor\\Fluent_GMI\\tests'\n",
     "hypotheses_path = folder_path + '\\\\' + 'Model_hypotheses.xlsx'\n",
     "condi_path = folder_path + '\\\\' + 'test-Conditions-AR.xlsx'\n",
@@ -93,6 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 'mesh' ou 'case'\n",
     "ht_tot_mesh_case_list, ht_rad_mesh_case_list, ht_conv_mesh_case_list, CFD_mesh_case_list, df_one_mesh_case_list, slices_df_mesh_case_list, PyFluent_mesh_case_list = pb.get_data(plot_hyp, panelSpecs, hyp, stepConditions)"
    ]
   },
@@ -102,33 +95,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ht_tot_mesh_case_list[6]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "no_mesh = plot_hyp['no_mesh']\n",
-    "no_case = plot_hyp['no_case']\n",
-    "tot_ratio = ht_tot_mesh_case_list[0][ht_tot_mesh_case_list[0]['Component'].isin(['pv_front']) ]['ht'].values[0]\n",
-    "source_ratio = ht_tot_mesh_case_list[0][ht_tot_mesh_case_list[0]['Component'].isin(['User Energy Source']) ]['ht'].values[0]\n",
-    "rad_ratio = ht_rad_mesh_case_list[0][ht_rad_mesh_case_list[0]['Component'].isin(['pv_front']) ]['rad_ht'].values[0]\n",
-    "conv_ratio = ht_conv_mesh_case_list[0][ht_conv_mesh_case_list[0]['Component'].isin(['pv_front']) ]['conv_ht'].values[0]\n",
-    "ratio_rad = rad_ratio/(tot_ratio-source_ratio)\n",
-    "ratio_conv = conv_ratio/(tot_ratio-source_ratio)\n",
-    "ratio_source = -source_ratio/(tot_ratio-source_ratio)\n",
-    "print(ratio_rad+ ratio_conv+ ratio_source)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Cas 'mesh' ou 'case'\n",
     "Qdot_tube_fluid, Qdot_top, Qdot_top_rad, Qdot_tube_back, Qdot_PV_sky = pb.calculate_Qdot(plot_hyp, panelSpecs, hyp, stepConditions, mesh = 0, case = 0, iteration = 0)"
    ]
   },
@@ -138,28 +105,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pb.plot_CFD_last_it('Qdot_top_conv', plot_hyp, panelSpecs, hyp, stepConditions)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pb.plot_1D_last_it('Qdot_PV_sky', plot_hyp, panelSpecs, hyp, stepConditions)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Cas 'ref\n",
     "plot_hyp['method'] = 'ref'\n",
-    "pb.plot_big_it('Qdot_tube_fluid', plot_hyp, panelSpecs, hyp, stepConditions) \n",
-    "## PV_sky mal implémenté \n",
-    "## Qdot_top_rad revoir comment le faire"
+    "ht_tot_AR_list, ht_rad_AR_list, ht_conv_AR_list, CFD_AR_list, df_one_AR_list, slices_df_AR_list, PyFluent_AR_list, ht_tot_uniform, ht_rad_uniform, ht_conv_uniform, CFD_uniform, df_one_uniform, slices_df_uniform, df_PyFluent_uniform, df_one_1D, slices_df_1D, df_PyFluent_1D = pb.get_data(plot_hyp, panelSpecs, hyp, stepConditions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Qdot = \"Qdot_tube_fluid\"\n",
+    "pb.plot_CFD_last_it(Qdot, plot_hyp, panelSpecs, hyp, stepConditions)\n",
+    "pb.plot_1D_last_it(Qdot, plot_hyp, panelSpecs, hyp, stepConditions)\n",
+    "pb.plot_big_it(Qdot, plot_hyp, panelSpecs, hyp, stepConditions)"
    ]
   },
   {
@@ -171,19 +131,7 @@
     "plot_hyp['method'] = 'case'\n",
     "plot_hyp['no_case'] = 7\n",
     "plot_hyp['no_mesh'] = 0\n",
-    "pb.plot_big_it('Qdot_top_rad', plot_hyp, panelSpecs, hyp, stepConditions) \n",
-    "## PV_sky mal implémenté \n",
-    "## Qdot_top_rad revoir comment le faire"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_hyp['method'] = 'ref'\n",
-    "ht_tot_AR_list, ht_rad_AR_list, ht_conv_AR_list, CFD_AR_list, df_one_AR_list, slices_df_AR_list, PyFluent_AR_list, ht_tot_uniform, ht_rad_uniform, ht_conv_uniform, CFD_uniform, df_one_uniform, slices_df_uniform, df_PyFluent_uniform, df_one_1D, slices_df_1D, df_PyFluent_1D = pb.get_data(plot_hyp, panelSpecs, hyp, stepConditions)\n"
+    "pb.plot_big_it('Qdot_top_rad', plot_hyp, panelSpecs, hyp, stepConditions) "
    ]
   },
   {
@@ -193,33 +141,6 @@
    "outputs": [],
    "source": [
     "pb.plot_profile_temp(plot_hyp, panelSpecs, hyp, stepConditions)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_hyp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_hyp['method'] = 'mesh'\n",
-    "plot_hyp['nb_cases'] = 5\n",
-    "plot_hyp['nb_mesh'] = 1\n",
-    "plot_hyp['nb_it'] = 7\n",
-    "plot_hyp['folder_mesh'] = 'Simu_M'\n",
-    "plot_hyp['folder_name'] = 'cas_'\n",
-    "plot_hyp['new_save'] = True\n",
-    "pb.plot_1D_DeltaT_tot('Qdot_tube_fluid', plot_hyp, panelSpecs, hyp, stepConditions)\n",
-    "# pb.plot_1D_DeltaT_part('Qdot_tube_fluid', plot_hyp, panelSpecs, hyp, stepConditions)\n",
-    "## Fonctionne pas trop "
    ]
   },
   {
@@ -246,14 +167,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plot_hyp['method'] = 'case'\n",
+    "plot_hyp['no_case'] = 7\n",
+    "plot_hyp['no_mesh'] = 0\n",
+    "plot_hyp['nb_it']=7\n",
+    "plot_hyp['folder_mesh'] = 'Simu_M'\n",
+    "plot_hyp['folder_name'] = 'cas_'\n",
+    "plot_hyp['new_save'] = False\n",
+    "pb.plot_CFD_last_it('Qdot_tube_fluid', plot_hyp, panelSpecs, hyp, stepConditions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "plot_hyp['method'] = 'mesh'\n",
     "plot_hyp['nb_cases'] = 3\n",
-    "plot_hyp['nb_mesh'] = 1\n",
+    "plot_hyp['nb_mesh'] = 4\n",
     "plot_hyp['nb_it'] = 1\n",
     "plot_hyp['folder_mesh'] = 'Simu_uniform'\n",
     "plot_hyp['folder_name'] = 'cas_M'\n",
     "plot_hyp['new_save'] = False\n",
-    "pb.plot_CFD_last_it('Qdot_top_conv', plot_hyp, panelSpecs, hyp, stepConditions)"
+    "nb_mesh = plot_hyp['nb_mesh']\n",
+    "nb_cases = plot_hyp['nb_cases']\n",
+    "\n",
+    "for mesh in range(nb_mesh):\n",
+    "    for case in range(nb_cases):\n",
+    "        ratio_rad, ratio_conv = pb.rad_conv_ratio(plot_hyp, panelSpecs, hyp, stepConditions, mesh, case, -1)\n",
+    "        print(f'ratio_rad = {ratio_rad}, ratio_conv = {ratio_conv}, Simu_uniform{mesh+1}, cas_M{case}')"
    ]
   },
   {
@@ -262,52 +205,70 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plot_hyp['method'] = 'mesh'\n",
+    "plot_hyp['nb_cases'] = 3\n",
+    "plot_hyp['nb_mesh'] = 4\n",
+    "plot_hyp['nb_it'] = 1\n",
+    "plot_hyp['folder_mesh'] = 'Simu_uniform'\n",
+    "plot_hyp['folder_name'] = 'cas_M'\n",
+    "plot_hyp['new_save'] = False\n",
+    "pb.plot_CFD_last_it('Qdot_PV_sky', plot_hyp, panelSpecs, hyp, stepConditions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "file_name = 'residuals_cas_ref_CFD_uniform.txt'\n",
-    "file_path_base = r'D:\\ANSYS Fluent Projects\\pvt_slice_outdoor\\Fluent_GMI\\tests\\cas_M3'\n",
-    "file_path = os.path.join(file_path_base, file_name)\n",
-    "residuals = pb.extract_residuals(file_path)\n",
-    "pd.DataFrame(residuals[0]).plot()"
+    "residual = 0\n",
+    "for j in range(3) :\n",
+    "    fig, ax = plt.subplots()\n",
+    "    file_path_base = r'D:\\ANSYS Fluent Projects\\pvt_slice_outdoor\\Fluent_GMI\\tests' + '\\\\' + f'Simu_uniform2\\cas_M{j}'\n",
+    "    file_path = os.path.join(file_path_base, file_name)\n",
+    "    residuals2 = pb.extract_residuals(file_path)\n",
+    "    file_path_base = r'D:\\ANSYS Fluent Projects\\pvt_slice_outdoor\\Fluent_GMI\\tests' + '\\\\' + f'Simu_uniform3\\cas_M{j}'\n",
+    "    file_path = os.path.join(file_path_base, file_name)\n",
+    "    residuals3 = pb.extract_residuals(file_path)\n",
+    "    file_path_base = r'D:\\ANSYS Fluent Projects\\pvt_slice_outdoor\\Fluent_GMI\\tests' + '\\\\' + f'Simu_uniform4\\cas_M{j}'\n",
+    "    file_path = os.path.join(file_path_base, file_name)\n",
+    "    residuals4 = pb.extract_residuals(file_path)\n",
+    "    residuals2[residual].plot(ax= ax, logy=True, legend = True)\n",
+    "    residuals3[residual].plot(ax= ax, logy=True, legend = True)\n",
+    "    residuals4[residual].plot(ax= ax, logy=True, legend = True)\n",
+    "    ax.set_title(f'Uniform 2, 3 and 4, mesh {j+1}')\n",
+    "    ax.set_xlabel('Iteration')\n",
+    "    plt.show()\n",
+    "    # pd.DataFrame(residuals[4] residuals[0]).plot(logy=True, legend = True, title = f'Uniform {i}, cas {j}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.5179887500000007, 0.7235911733333265)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "file_name = 'residuals_cas_ref_CFD_uniform.txt'\n",
-    "file_path_M0 = r'D:\\ANSYS Fluent Projects\\pvt_slice_outdoor\\Fluent_GMI\\tests\\Simu_uniform1\\cas_M0'\n",
-    "file_path_M1 = r'D:\\ANSYS Fluent Projects\\pvt_slice_outdoor\\Fluent_GMI\\tests\\Simu_uniform1\\cas_M1'\n",
-    "file_path_M2 = r'D:\\ANSYS Fluent Projects\\pvt_slice_outdoor\\Fluent_GMI\\tests\\Simu_uniform1\\cas_M2'\n",
-    "os.path.join(file_path_M0, file_name)\n",
-    "residualsM0 = pb.extract_residuals(os.path.join(file_path_M0, file_name))\n",
-    "residualsM1 = pb.extract_residuals(os.path.join(file_path_M1, file_name))\n",
-    "residualsM2 = pb.extract_residuals(os.path.join(file_path_M2, file_name))\n",
-    "residuals = []\n",
-    "for i in range(5): \n",
-    "    residuals.append(pd.concat([residualsM0[i], residualsM1[i], residualsM2[i]], axis=1))\n",
-    "    pd.DataFrame(residuals[i]).plot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "    fig = go.Figure()\n",
-    "    \n",
-    "    for column in df.columns:\n",
-    "        fig.add_trace(go.Scatter(x=df.index, y=df[column], mode='lines', name=column))\n",
-    "    \n",
-    "    fig.update_layout(title='Graph of Residuals',\n",
-    "                      xaxis_title='Iteration',\n",
-    "                      yaxis_title='Value',\n",
-    "                      yaxis_type='log',  # Set the y-axis to logarithmic scale\n",
-    "                      legend_title='Residuals',\n",
-    "                      template='plotly_dark')\n",
-    "    \n",
-    "    fig.show()"
+    "plot_hyp['method'] = 'case'\n",
+    "plot_hyp['no_case'] = 7\n",
+    "plot_hyp['no_mesh'] = 0\n",
+    "plot_hyp['nb_it']= 1\n",
+    "plot_hyp['folder_mesh'] = 'Simu_CFD'\n",
+    "plot_hyp['folder_name'] = 'cas_'\n",
+    "plot_hyp['new_save'] = False\n",
+    "pb.compute_quality(plot_hyp, panelSpecs, hyp, stepConditions)"
    ]
   }
  ],
