--- a/CFD/ANSYS_Py_Bridge.ipynb
+++ b/CFD/ANSYS_Py_Bridge.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -888,7 +888,7 @@
     "T_fluid_in0 = stepConditions[case]['T_fluid_in0']\n",
     "\n",
     "# Créer le chemin complet du dossier de résultats\n",
-    "folder_path_case = os.path.join(folder_path, f\"cas_test\")\n",
+    "folder_path_case = os.path.join(folder_path, f\"cas_M2\")\n",
     "\n",
     "# Vérifier si le dossier n'existe pas déjà\n",
     "if not os.path.exists(folder_path_case):\n",
@@ -905,7 +905,7 @@
     "\n",
     "# File > Application > Start > folder_path_ansys\n",
     "# Ensuite copier le numéro du server et le modifier ci-dessous\n",
-    "solver_path = folder_path_ansys + '\\server\\\\' + 'server_info-19440.txt'\n",
+    "solver_path = folder_path_ansys + '\\server\\\\' + 'server_info-11972.txt'\n",
     "# Créer une session\n",
     "solver = pyfluent.connect_to_fluent(server_info_file_name=solver_path)\n",
     "tui = solver.tui\n",
@@ -960,7 +960,7 @@
     "\n",
     "\n",
     "## Initialisation\n",
-    "c = 0.0001 # m/s\n",
+    "c = 0.00001 # m/s\n",
     "cy = c/np.sqrt(2)\n",
     "cz = - c/np.sqrt(2)\n",
     "# L_abs = panelSpecs['main']['L_abs']\n",
@@ -973,17 +973,17 @@
     "\n",
     "\n",
     "# ## Modification des paramètres dans ANSYS Fluent\n",
-    "# apb.set_value('T_fluid_in_1', 'named_expression', Inputs_PyFluent, T_fluid_in0) # Au cas où\n",
-    "# for part in range(1, nb_hx+1):\n",
-    "#     T_fluid_in = apb.get_value(f'T_fluid_in_{part}', 'named_expression', Inputs_PyFluent)\n",
-    "#     a_f = apb.get_value(f'a_f_{part}', 'named_expression', Inputs_PyFluent)\n",
-    "#     b_f = apb.get_value(f'b_f_{part}', 'named_expression', Inputs_PyFluent)\n",
-    "#     jg.change_named_expression(tui, f'T_fluid_in_{part}', T_fluid_in, 'K')\n",
-    "#     jg.change_named_expression(tui, f'a_f_{part}', a_f, 'm^-1')\n",
-    "#     jg.change_named_expression(tui, f'b_f_{part}', b_f, 'K m^-1')\n",
-    "# T_fluid_out = apb.get_value(f'T_fluid_in_{nb_hx+1}', 'named_expression', Inputs_PyFluent)\n",
-    "# jg.change_named_expression(tui, f'T_fluid_in_{nb_hx+1}', T_fluid_out, 'K')\n",
-    "# jg.change_named_expression(tui, 'Heat_Generation_Rate', Heat_Generation_Rate, 'W/m^3')\n",
+    "apb.set_value('T_fluid_in_1', 'named_expression', Inputs_PyFluent, T_fluid_in0) # Au cas où\n",
+    "for part in range(1, nb_hx+1):\n",
+    "    T_fluid_in = apb.get_value(f'T_fluid_in_{part}', 'named_expression', Inputs_PyFluent)\n",
+    "    a_f = apb.get_value(f'a_f_{part}', 'named_expression', Inputs_PyFluent)\n",
+    "    b_f = apb.get_value(f'b_f_{part}', 'named_expression', Inputs_PyFluent)\n",
+    "    jg.change_named_expression(tui, f'T_fluid_in_{part}', T_fluid_in, 'K')\n",
+    "    jg.change_named_expression(tui, f'a_f_{part}', a_f, 'm^-1')\n",
+    "    jg.change_named_expression(tui, f'b_f_{part}', b_f, 'K m^-1')\n",
+    "T_fluid_out = apb.get_value(f'T_fluid_in_{nb_hx+1}', 'named_expression', Inputs_PyFluent)\n",
+    "jg.change_named_expression(tui, f'T_fluid_in_{nb_hx+1}', T_fluid_out, 'K')\n",
+    "jg.change_named_expression(tui, 'Heat_Generation_Rate', Heat_Generation_Rate, 'W/m^3')\n",
     "\n",
     "\n",
     "\n",
