--- a/CFD/test_bridge.ipynb
+++ b/CFD/test_bridge.ipynb
@@ -589,11 +589,11 @@
     "\n",
     "        for i in range(1, nb_hx+3) :\n",
     "            if i == 3 or i == 5 :\n",
-    "                phi_tube_list.append(Qdot_conv[Qdot_conv['Component'].isin(eval(f'part{i}'))]['conv_ht'].sum()/Areas_back[i-1])\n",
-    "                phi_top_list.append(Qdot_conv[Qdot_conv['Component'].isin(eval(f'part{i}_top'))]['conv_ht'].sum()/Areas_top[i-1])\n",
+    "                phi_tube_list.append(Qdot_tot[Qdot_tot['Component'].isin(eval(f'part{i}'))]['ht'].sum()/Areas_back[i-1])\n",
+    "                phi_top_list.append(Qdot_tot[Qdot_tot['Component'].isin(eval(f'part{i}_top'))]['ht'].sum()/Areas_top[i-1])\n",
     "                phi_abs_list.append(1e-6)\n",
     "            else :\n",
-    "                phi_tube_list.append(Qdot_conv[Qdot_conv['Component'].isin(eval(f'part{i}'))]['conv_ht'].sum()/Areas_back[i-1])\n",
+    "                phi_tube_list.append(Qdot_tot[Qdot_tot['Component'].isin(eval(f'part{i}'))]['ht'].sum()/Areas_back[i-1])\n",
     "                phi_top_list.append(1e-6)\n",
     "                phi_abs_list.append(1e-6)\n",
     "\n",
