--- a/fins_tests.ipynb
+++ b/fins_tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,28 +87,63 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import model_fins as modfins"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "T, dTdx, expression, gamma, Qdot = modfins.fin_analytical('free_end')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gamma"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "float(gamma.subs({L_fin: 0.02, lambd: 0.05, Ac: 0.5, k: 250, Bi: 1e-4}).evalf())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "modfins.gamma_fin('free_end', 0.02, 0.001, 0.5, 226, 1e-4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sympy as sp\n",
-    "\n",
-    "# Define symbolic variables\n",
-    "x, a, Bi, T_ext, T_0, L_0, k = sp.symbols('x a Bi T_ext T_0 L_0 k')\n",
-    "\n",
-    "# Define the temperature profile solution\n",
-    "A = sp.Symbol('A')\n",
-    "B = sp.Symbol('B')\n",
-    "\n",
-    "# Temperature function T(x)\n",
-    "T = T_ext + A * sp.cosh(sp.sqrt(2 * Bi) * x/a) + B * sp.sinh(sp.sqrt(2 * Bi) * x/a)"
+    "Qdot"
    ]
   },
   {
@@ -117,95 +152,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Boundary condition at x = 0 (T(0) = T_0)\n",
-    "boundary_condition_0 = sp.Eq(T.subs(x, 0), T_0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Solve for A\n",
-    "A_solution = sp.solve(boundary_condition_0, A)[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "A_solution"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sp.diff(T, x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Substitute the value of A in T(x)\n",
-    "T = T.subs(A, A_solution)\n",
-    "\n",
-    "# Derivative of T(x) with respect to x (for boundary condition at x = L_0)\n",
-    "dTdx_L0 = sp.diff(T, x).subs(x, L_0)\n",
-    "\n",
-    "# Boundary condition at x = L_0 (free flux condition)\n",
-    "boundary_condition_L0 = sp.Eq(dTdx_L0 + (Bi / a) * (T.subs(x, L_0) - T_ext), 0)\n",
-    "\n",
-    "# Solve for B using the boundary condition at x = L_0\n",
-    "B_solution = sp.solve(boundary_condition_L0, B)[0]\n",
-    "\n",
-    "# Substitute the value of B back into the temperature profile\n",
-    "T = T.subs(B, B_solution)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "B_solution"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Boundary condition at x = 0 (T(0) = T_0)\n",
-    "boundary_condition_0 = sp.Eq(T.subs(x, 0), T_0)"
+    "float(gamma.subs({Bi: 0.5, lambd: 0.05, T_ext: 273.15, T_0: 283.15, L_fin: 0.050, k: 250, h: 10, delta: 0.02, delta_int: 0.02, L_tube: 1., N: 1}).evalf())"
    ]
   }
  ],
