--- a/CFD/bridge_main.ipynb
+++ b/CFD/bridge_main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,6 +15,7 @@
     "from datetime import datetime\n",
     "from io import StringIO\n",
     "\n",
+    "import glob\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -37,15 +38,15 @@
     "import time\n",
     "\n",
     "\n",
-    "# sys.path.append(r'D:\\seagu_OneDrive\\Documents\\GitHub\\parallel-flow-distribution-pressure-loss\\ansys')\n",
-    "sys.path.append(r'G:\\Mon Drive\\GitHub\\PVT-thermal-performance-model')\n",
-    "\n",
-    "sys.path.append(r'G:\\Mon Drive\\GitHub\\PVT-PL-model\\ansys')\n",
+    "sys.path.append(r'D:\\seagu_OneDrive\\Documents\\GitHub\\parallel-flow-distribution-pressure-loss\\ansys')\n",
+    "sys.path.append(r'D:\\seagu_OneDrive\\Documents\\GitHub\\PVT-thermal-performance-model')\n",
+    "# sys.path.append(r'G:\\Mon Drive\\GitHub\\PVT-thermal-performance-model')\n",
+    "# sys.path.append(r'G:\\Mon Drive\\GitHub\\PVT-PL-model\\ansys')\n",
     "\n",
     "\n",
     "import jou_gen as jg\n",
     "import ansys_py_bridge as apb\n",
-    "# import ansys.fluent.core as pyfluent\n",
+    "import ansys.fluent.core as pyfluent\n",
     "import model as ty\n",
     "import proc as pr\n",
     "import plot_functions_here as pfun\n",
@@ -66,26 +67,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "folder_path = r'D:\\ANSYS Fluent Projects\\pvt_slice_outdoor\\Fluent_GMI\\tests'\n",
-    "geometry_path = folder_path + '\\\\' + 'Inputs_TEST_V4.5_GG.xlsx'\n",
-    "hypotheses_path = folder_path + '\\\\' + 'Model_hypotheses.xlsx'\n",
-    "condi_path = folder_path + '\\\\' + 'test-Conditions-AR.xlsx'\n",
-    "folder_path_ansys = os.path.abspath(os.path.join(folder_path, '..'))\n",
-    "Inputs_PyFluent_path = folder_path + '\\\\' + 'Inputs_PyFluent.xlsx'\n",
+    "main_fp = r'D:\\ANSYS Fluent Projects\\pvt_slice_outdoor\\Fluent_GMI'\n",
+    "Mesh_fp = os.path.join(main_fp, 'Mesh')\n",
+    "S2S_fp = os.path.join(main_fp, 'S2S')\n",
     "\n",
-    "panelSpecs = pr.import_geometry(geometry_path)\n",
-    "steadyStateConditions_df = pd.read_excel(condi_path,header=2)\n",
+    "templates_fp = r'D:\\ANSYS Fluent Projects\\pvt_slice_outdoor\\Fluent_GMI\\Templates'\n",
+    "geometry_path = templates_fp + '\\\\' + 'Inputs_TEST_V4.5_GG.xlsx'\n",
+    "hypotheses_path = templates_fp + '\\\\' + 'Model_hypotheses.xlsx'\n",
+    "testConditions_path = templates_fp + '\\\\' + 'tC0.xlsx'\n",
+    "Inputs_PyFluent_path = templates_fp + '\\\\' + 'Inputs_PyFluent.xlsx'\n",
+    "\n",
+    "panelSpecs, hyp, steadyStateConditions_df, Inputs_PyFluent = bm.import_inputs(geometry_path, hypotheses_path, testConditions_path, Inputs_PyFluent_path)\n",
     "steadyStateConditions_dict = steadyStateConditions_df.to_dict(orient='records')\n",
-    "Inputs_PyFluent = bm.read_Inputs_PyFluent(Inputs_PyFluent_path)\n",
     "\n",
-    "tui, solver = bm.init_solver(folder_path_ansys, bm.server_code)\n",
+    "caoMeshName = 'A3_M1__V4.5NI_s_r60'\n",
+    "caoMeshCode = caoMeshName.split('__')[0]\n",
+    "testConditionsCode = os.path.splitext(os.path.basename(testConditions_path))[0]\n",
+    "\n",
+    "Inputs = (caoMeshCode, testConditionsCode, panelSpecs, hyp, steadyStateConditions_dict, Inputs_PyFluent)\n",
+    "\n",
+    "tui, solver = bm.init_solver(main_fp, '1610')\n",
     "nb_it = 50\n",
-    "nb_big_it = 5\n",
+    "nb_big_it = 4\n",
     "T_out_diff_convergence_control = 0.05"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# jg.create_radiation(tui, caoMeshCode)"
    ]
   },
   {
@@ -101,9 +118,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "msh_h5_files = glob.glob(Mesh_fp + '/*.msh.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "## Boucle cas / Cas par cas AR\n",
     "\n",
-    "bm.simu_bridge_cases(tui, solver, folder_path, hypotheses_path, panelSpecs, Inputs_PyFluent, steadyStateConditions_dict, nb_it, nb_big_it, T_out_diff_convergence_control)"
+    "# testConditions_path = templates_fp + '\\\\' + 'tC0.xlsx'\n",
+    "# testConditionsCode = os.path.splitext(os.path.basename(testConditions_path))[0]\n",
+    "\n",
+    "nb_it = 10\n",
+    "nb_big_it = 4\n",
+    "\n",
+    "bm.simu_bridge_cases(tui, solver, main_fp, Inputs, nb_it, nb_big_it, T_out_diff_convergence_control, method = 'bridge')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Boucle cas / Cas par cas AR\n",
+    "\n",
+    "# bm.simu_bridge_cases(tui, solver, main_fp, Inputs, nb_it, nb_big_it, T_out_diff_convergence_control, method = 'uniform')"
    ]
   },
   {
@@ -121,7 +164,7 @@
    "source": [
     "## Boucle plusieurs géométries/maillages, cas AR\n",
     "\n",
-    "geometries_dict = pd.read_excel(folder_path + '\\\\' + 'test-geometries.xlsx')\n",
+    "geometries_dict = pd.read_excel(templates_fp + '\\\\' + 'test-geometries.xlsx')\n",
     "nb_geom = len(geometries_dict)\n",
     "\n",
     "for geom in range(nb_geom) :\n",
@@ -243,7 +286,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
